--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" >
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>게시판 페이지</title>
@@ -7,13 +7,12 @@
 
 <body>
 
-<header th:replace="~{header :: header}">
-</header>
+<header id="header"></header>
 <main>
     <form>
-        <label hidden="hidden" for="search-type" >유형</label>
+        <label hidden="hidden" for="search-type">유형</label>
         <select id="search-type" name="search-type">
-            <option >제목</option>
+            <option>제목</option>
             <option>본문</option>
             <option>ID</option>
             <option>닉네임</option>
@@ -26,32 +25,32 @@
 
     <table>
         <thead>
-            <tr>
-                <th>제목</th>
-                <th>해시태그</th>
-                <th>작성자</th>
-                <th>작성일</th>
-            </tr>
+        <tr>
+            <th>제목</th>
+            <th>해시태그</th>
+            <th>작성자</th>
+            <th>작성일</th>
+        </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>첫글</td>
-                <td>#Java</td>
-                <td>Hwang</td>
-                <td>2023-01-01</td>
-            </tr>
-            <tr>
-                <td>두번째글</td>
-                <td>#spring</td>
-                <td>Hwang</td>
-                <td>2023-01-02</td>
-            </tr>
-            <tr>
-                <td>세번째글</td>
-                <td>#Python</td>
-                <td>Hwang</td>
-                <td>2023-01-03</td>
-            </tr>
+        <tr>
+            <td>첫글</td>
+            <td>#Java</td>
+            <td>Hwang</td>
+            <td>2023-01-01</td>
+        </tr>
+        <tr>
+            <td>두번째글</td>
+            <td>#spring</td>
+            <td>Hwang</td>
+            <td>2023-01-02</td>
+        </tr>
+        <tr>
+            <td>세번째글</td>
+            <td>#Python</td>
+            <td>Hwang</td>
+            <td>2023-01-03</td>
+        </tr>
         </tbody>
     </table>
 
@@ -66,6 +65,6 @@
         </table>
     </nav>
 </main>
-<footer th:replace="footer :: footer"></footer>
+<footer id="footer"></footer>
 </body>
 </html>
